Organizando arquivos de 1-Introducao-ao-Node.JS

--- a/1-Introducao-ao-Node.JS/package.json
+++ b/1-Introducao-ao-Node.JS/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "curso-do-zero-a-nuvem",
+  "name": "introducao-ao-node.js",
   "version": "1.0.0",
   "description": "Repositório criado para guardar meu estudo do curso Do Zero à Nuvem",
   "main": "main.js",
