--- a/2-API-REST-Node-Restify/package.json
+++ b/2-API-REST-Node-Restify/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "mongoose": "^5.13.3",
     "restify": "^8.5.1"
   },
   "devDependencies": {
