Tratamento de Erros com Restify

--- a/2-API-REST-Node-Restify/package.json
+++ b/2-API-REST-Node-Restify/package.json
@@ -14,6 +14,7 @@
     "restify": "^8.5.1"
   },
   "devDependencies": {
-    "@types/restify": "^8.5.2"
+    "@types/restify": "^8.5.2",
+    "@types/restify-errors": "^4.3.4"
   }
 }
