--- a/2-API-REST-Node-Restify/package.json
+++ b/2-API-REST-Node-Restify/package.json
@@ -12,11 +12,13 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "mongoose": "^5.13.3",
-    "restify": "^8.5.1"
+    "restify": "^8.5.1",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^27.0.0",
+    "@types/jsonwebtoken": "^8.5.5",
     "@types/restify": "^8.5.2",
     "@types/restify-errors": "^4.3.4",
     "axios": "^0.21.1",
